docs/老李k8s笔记/k8s学习/实战篇-Ingress实现金丝雀发布/YAML/nginx124.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy124
  namespace: canary
  labels:
    app: nginx124
spec:
  selector:
    matchLabels:
      app: nginx124
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx124
    spec:
      containers:
        - name: container-nginx124
          image: mynginx:1.24.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service124
  namespace: canary
spec:
  selector:
    app: nginx124
  ports:
    - port: 80
      targetPort: 80
