docs/老李k8s笔记/k8s学习/实战篇-Ingress实现金丝雀发布/YAML/canaryingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: canary
spec:
  ingressClassName: nginx
  rules:
    - host: www.nginx.com
      http:
        paths:
          - path: /
            backend:
              service:        
                name: nginx-service124
                port: 
                  number: 80
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-canary
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.nginx.com
      http:
        paths:
          - path: /
            backend:
              service:        
                name: nginx-service126
                port: 
                  number: 80
            pathType: Prefix
